--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,12 @@
         android:theme="@style/Theme.ABER"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.Main.EditActivity.EditVehicleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.Main.EditActivity.EditAddressActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.SplashActivity"
             android:exported="true">
             <intent-filter>
