--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -15,16 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ABER"
-        tools:targetApi="31">
+        tools:targetApi="31" >
         <activity
-            android:name=".Activities.Main.EditActivity.EditVehicleActivity"
+            android:name=".DriverChatActivity"
             android:exported="false" />
         <activity
-            android:name=".Activities.Main.EditActivity.EditAddressActivity"
+            android:name=".HelpActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.SplashActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -41,9 +41,9 @@
 
         <activity
             android:name=".Activities.Main.MainActivity"
+            android:configChanges="keyboardHidden|orientation|screenSize"
             android:exported="false"
-            android:windowSoftInputMode="adjustPan"
-            android:configChanges="keyboardHidden|orientation|screenSize"/>
+            android:windowSoftInputMode="adjustPan" />
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="false" />
