--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,10 +17,10 @@
         android:theme="@style/Theme.ABER"
         tools:targetApi="31" >
         <activity
-            android:name=".DriverChatActivity"
+            android:name=".Activities.Main.Fragment.Chat.DriverChatActivity"
             android:exported="false" />
         <activity
-            android:name=".HelpActivity"
+            android:name=".Activities.Main.Fragment.Profile.HelpActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.SplashActivity"
@@ -31,6 +31,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.canhub.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"
+            />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
