--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,8 +15,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ABER"
-        tools:targetApi="31" >
-        <activity
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
+    <activity
             android:name=".Activities.Main.Fragment.Chat.DriverChatActivity"
             android:exported="false" />
         <activity
