--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,18 +15,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.ABER"
-        tools:targetApi="31">
+        tools:targetApi="31"
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".Activities.Main.Fragment.AboutUs.AboutUsActivity"
             android:exported="false" />
         <activity
-            android:name=".AboutUsActivity"
+            android:name=".Activities.Main.Fragment.Chat.DriverChatActivity"
             android:exported="false" />
         <activity
-            android:name=".DriverChatActivity"
-            android:exported="false" />
-        <activity
-            android:name=".HelpActivity"
+            android:name=".Activities.Main.Fragment.Profile.HelpActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.SplashActivity"
@@ -37,6 +35,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="com.canhub.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"
+            />
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
