--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".Activities.Main.Fragment.AboutUs.AboutUsActivity"
+            android:name=".Activities.Main.Fragment.Profile.AboutUs.AboutUsActivity"
             android:exported="false" />
         <activity
             android:name=".Activities.Main.Fragment.Chat.DriverChatActivity"
