--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,17 @@
         android:theme="@style/Theme.ABER"
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
+        <!-- register the receiver -->
+        <receiver
+            android:name=".Services.SOS.ReactivateService"
+            android:enabled="true"
+            android:exported="true"/>
+
+        <!-- register the service -->
+        <service
+            android:name=".Services.SOS.SensorService"
+            android:enabled="true"
+            android:exported="true" />
         <activity
             android:name=".Activities.Main.Fragment.Profile.AboutUs.AboutUsActivity"
             android:exported="false" />
@@ -62,7 +73,9 @@
             android:exported="false" />
         <activity
             android:name=".Activities.Register.RegisterActivity"
-            android:exported="false" />
+            android:exported="false"
+            android:windowSoftInputMode="stateHidden"
+            />
         <service
             android:name=".Services.Notification.FCMNotificationService"
             android:exported="false">
